# solana-balance

./: README.md
server/: .env  Cargo.toml  README.md
server/src/: config.rs  lib.rs  main.rs
ux/: .env  README.md  package-lock.json  package.json
ux/public/: index.html
ux/src/: App.css  App.tsx  index.tsx
