[package]
name = "rijulgulati-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.9.5"
solana-program = "1.9.5"
actix-web = "3"
serde = "1"
dotenv = "0.15.0"
actix-cors = "0.5.4"
